# har-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  har_clustering.ipynb  pyproject.toml  requirements.txt
.github/workflows/: release.yml
notebook/: har_clustering.ipynb  har_clustering.md.j2
src/: config.py  har_clustering.ipynb  har_clustering.md.j2  logger.py  main.py
src/assets/notebook/: har_clustering.md
src/controller/: __init__.py  har_controller.py  health_controller.py  notebook_controller.py
src/error/: __init__.py  models.py
src/model/: __init__.py  har_model.py
src/models/: errors.py  har.py
src/service/: __init__.py  har_service.py  notebook_service.py
static/: har_clustering.md
