[project]
name = "har_api"
version = "1.0.0"
description = "Api para obtener la predicción del HAR (Human Activity Recognition)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pre-commit>=4.2.0",
    "requests>=2.32.3",
    "ruff>=0.11.11",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]

[tool.ruff]
line-length = 80
